# SIGNALFORGE-CODEX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tmp_additional_arena_eval.err  .tmp_compare_validator.py  .tmp_eval_focus.py  .tmp_eval_focused_books.py  .tmp_eval_proto.py  .tmp_fast_eval.py  .tmp_focused_books_365.json  .tmp_focused_books_365_full.json  .tmp_fund_baseline.json  .tmp_fund_candidate_a.json  .tmp_fund_candidate_b.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FORK_IDENTITY.md  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  demo.py  docker-compose.yml  live_terminal_dashboard.py  main.py  pyproject.toml  requirements.txt  sf.py  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
config/: adaptive_multi_asset_example.yaml  calibration.json  settings.yaml
fund_data/: adaptive_cycle_ledger.jsonl  adaptive_learning_history.jsonl  arena_ensemble_report.json  arena_ensemble_report_ranked.json  arena_iter1_xsmom_report.json  arena_iter2_regime_report.json  arena_research_report.json  capital_firewall_status.json  deployment_gate_status.json  drift_intelligence_status.json  execution_drift_status.json  failure_drill_report.json  health.json  kill_switch_telemetry.jsonl  live_trade_ledger.json  paper_validation_status.json  pipeline_e2e_report.json  production_certification_history.jsonl  production_certification_status.json  regime_novelty_history.jsonl  research_report.json  shadow_execution_status.json  shadow_live_comparator_status.json  strategy_overrides.json  streaming_stress_kernel_status.json  stress_context_history.jsonl  stress_context_status.json  stress_field_history.jsonl  stress_field_state.json  survivability_status.json  trade_parity_status.json  walk_forward_stress_v20.json
fund_data/arena_forward_latest/: report.json  (+3 more)
notebooks/: founder_command_center.ipynb
ops/: README.md  com.signalforge.kill_switch.plist  com.signalforge.paper_trader.plist  founder_operating_system.md
research/: 001_funding_edge_study.py  anomaly_scan.py  build_strategy.py  calibrate_cascade.py  capacity.py  honest_backtest.py  oos_validation.py
scripts/: alerts.py  analyse_funding_deploy_gate.py  arena_ensemble.py  arena_forward.py  arena_iter1_xsmom.py  arena_iter2_regime.py  arena_submit.py  autonomous_loop.py  calibrate_cascade.py  csfc_backtest.py  daily_report.py  dashboard.py  demo_adaptive_engine.py  funding_carry_backtest.py  funding_carry_sweep.py  funding_fade_backtest.py  funding_fade_sweep.py  go_live.py  health_check.py  investor_report.py  kill_switch.py  launch_all.sh  live_dashboard.py  live_terminal_dashboard.py  outcome_validation.py  paper_trade.py  paper_trade_live.py  paper_trade_v2.py  paper_trade_v20.py  paper_validation_report.py  pipeline_e2e.py  production_certification_report.py  production_drift_report.py  production_failure_drill.py  production_survivability_report.py  run_capital_firewall.py  run_deployment_gate.py  run_engine.py  run_execution_drift.py  run_institutional.py  (+20 more)
src/: registry.py
tests/: test_adaptive_engine.py  test_adaptive_runtime.py  test_alerts.py  test_arena_engine.py  test_arena_forward.py  test_attribution.py  test_autoloop.py  test_backtest_invariants.py  test_bandit.py  test_capital_firewall.py  test_dashboard_data.py  test_dataset_cache.py  test_deployment_gate.py  test_drift_intelligence.py  test_e2e.py  test_e2e_full.py  test_execution_abstraction.py  test_execution_drift.py  test_factory.py  test_fill_model.py  test_go_live_proximity.py  test_go_live_runtime.py  test_health_monitor.py  test_institutional.py  test_multi_venue.py  test_obs_logging.py  test_opportunity_engine.py  test_paper_validation.py  test_parity_audit.py  test_portfolio_engine.py  test_proceed_gate.py  test_production_bridge.py  test_registry.py  test_reporting_projections.py  test_shadow_live_comparator.py  test_streaming_stress_kernel.py  test_stress_context.py  test_stress_field_engine.py  test_survivability_lab.py  test_v2.py  (+4 more)
(+152 files in other folders)
